--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,15 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "file-saver": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "protobufjs": "~6.8.0",
     "rxjs": "5.4.3",
+    "save-file": "^1.2.0",
     "sw-toolbox": "3.6.0",
+    "web": "0.0.2",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
